# sharded-orders-ingestion-api

./: .env  .env.example  .gitignore  README.md  database.py  gcs_upload.py  insert.py  main.py  orders_10000.csv  process_order.py  pyproject.toml  sample_orders.csv  schema.sql  test_db.py
